# Fraud-Detection-Cases-for-E-Commerce-and-Bank-Transactions

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  format.ps1  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
data/processed/: CreditCard_processed.csv.dvc  FraudData_FeatureEngineered.csv.dvc  FraudData_processed.csv.dvc  IPAddressMap_processed.csv.dvc  MapIPtoCountry.csv.dvc  Train_Resampled_Scaled.csv.dvc  Train_Resampled_Scaled_Credit.csv.dvc  X_test_scaled_credit.csv.dvc  X_test_scaled_fraud.csv.dvc  y_test_credit.csv.dvc  y_test_fraud.csv.dvc
models/: .gitignore  Credit_best_model_Random_Forest.pkl.dvc  Fraud_best_model_XG_Boost.pkl.dvc  README.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modelling.ipynb  04_model_explainability.ipynb
scripts/: _01_data_preprocessing.py  _02_feature_engineering.py  _03_train_model.py  _04_explain_model.py
